--- a/altera_work/spw_babasu/spw_babasu.qsf
+++ b/altera_work/spw_babasu/spw_babasu.qsf
@@ -80,22 +80,22 @@ set_location_assignment PIN_AE20 -to sin_a
 set_location_assignment PIN_AD20 -to "sin_a(n)"
 set_location_assignment PIN_AF20 -to sout_a
 set_location_assignment PIN_AG20 -to "sout_a(n)"
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/TX_FIFO.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/TX_CLOCK.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/TX.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/SPW_TOP.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/RXTX_credit.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/RX_TIMEOUT.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/RX_sync.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/RX_receiver.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/RX_FIFO.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/RX_CLOCK_RECOVER.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/RX.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/FSM_TIMER.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/FSM.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/FIFO.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/RTL_VA/defines.sv
 set_global_assignment -name SDC_FILE sdc/spw_babasu.out.sdc
 set_global_assignment -name SYSTEMVERILOG_FILE top_rtl/spw_babasu.sv
 set_global_assignment -name QIP_FILE spw_babasu/synthesis/spw_babasu.qip
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/TX_FIFO.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/TX_CLOCK.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/TX.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/SPW_TOP.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/RXTX_credit.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/RX_TIMEOUT.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/RX_sync.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/RX_receiver.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/RX_FIFO.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/RX_CLOCK_RECOVER.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/RX.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/FSM_TIMER.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/FSM.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/FIFO.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/RTL_VA/defines.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
